--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
-<html>
-<head lang="en">
+<html lang="en">
+<head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>bstrap-test - A project to test Bootstrap</title>
+    <meta content="width=device-width, initial-scale=1" name="viewport">
+    <link href="../bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
+    <link href="app.css" rel="stylesheet">
 </head>
 <body>
-
+    <h1>bstrap-test</h1>
+    <script src="../bower_components/jquery/dist/jquery.js"></script>
+    <script src="../bower_components/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
